--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -96,6 +96,42 @@
                     </div>
                 </a>
             </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="{{user.port4}}" class="portfolio-box" target="_blank">
+                    <img src="{{user.port4Pic}}" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                {{user.port4Name}}
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="{{user.port5}}" class="portfolio-box" target="_blank">
+                    <img src="{{user.port5Pic}}" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                {{user.port5Name}}
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="{{user.port6}}" class="portfolio-box" target="_blank">
+                    <img src="{{user.port6Pic}}" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                {{user.port6Name}}
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
     </section>
